Changes:     Various FindBugs-inspired fixes.     - Changed several calls to new Boolean(boolean) to Boolean.valueOf(boolean).     - Made several inner classes static.
    Javadoc fixes.
    - Fixed error parsing and one-off errors.
    - Should no longer hang if an error occurs on the last line of a file.


git-svn-id: file:///tmp/test-svn/trunk@1442 fe72c1cf-3628-48e9-8b72-1c46755d3cff