@@ -14,7 +14,7 @@
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  * GNU General Public License for more details.
- *
+ *4
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
@@ -465,7 +465,7 @@ public class DynamicJavaAdapter implements JavaInterpreter {
       Class c = boolean.class;
       nameVisitorContext.defineConstant(name, c);
       checkVisitorContext.defineConstant(name, c);
-      evalVisitorContext.defineConstant(name, new Boolean(value));
+      evalVisitorContext.defineConstant(name, Boolean.valueOf(value));
     }
     
     /**
